# vaga-AeC

./: .dockerignore  .env.docker  .env.example  .env.local  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  EMAIL_ALERTS.md  MIGRATIONS.md  PRE_COMMITS.md  README.md  alertmanager.config.example.yml  create-self-signed-certs.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  server.py
.github/workflows/: lint.yml  type.yml  unit_tests.yml
config/alertmanager/: config.yml
config/alertmanager/templates/: email.tmpl
config/grafana/dashboards/: monitoring.json
config/prometheus/: alert.rules  prometheus.yml
migrations/: env.py
migrations/versions/: 79689b2e1878_email_to_auth_schema.py  de0f78533d1c_initial_migration.py
src/: __init__.py  app.py
src/application/models/: __init__.py  admin_model.py  book_model.py  credential_model.py  query_model.py
src/application/port/: __init__.py  payload_interface.py  reader_interface.py
src/application/services/: __init__.py  admin.py  admin_service.py  auth.py  auth_service.py  book.py  favorite_service.py  reader_service.py
src/application/utils/: __init__.py
src/background/: background_service.py
src/background/tasks/: __init__.py  base_task.py  create_default_admin_task.py
src/di/: di.py
src/infrastructure/cache/: redis_client.py
src/infrastructure/database/: connection.py
src/infrastructure/email/: __init__.py  connection.py
src/infrastructure/postgre/: connection.py
src/infrastructure/repositories/: __init__.py  admin_repository.py  auth_repository.py  book_repository.py  (+3 more)
src/utils/: default.py  logger.py  settings.py
templates/: reset_password.html  reset_success.html
(+76 files in other folders)
